another small style change in AboutMe confused with bug on mobile making work experience cards extend off the screen

--- a/portfolio-website/src/components/AboutMe.css
+++ b/portfolio-website/src/components/AboutMe.css
@@ -81,6 +81,8 @@
   }
 
   .about-me-photo {
+    padding: 0%;
+    padding-top: 4%;
     max-width: 225px;
   }
 }
